plugins {
    id 'java'
    id "me.champeau.jmh" version "0.7.2"
}

group = 'org.apache.logging.log4j'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_22
    targetCompatibility = JavaVersion.VERSION_22
}

dependencies {
    implementation project(':rlog4j-api')
    
    // Log4j 2 Core and Disruptor for Async Loggers baseline
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'com.lmax:disruptor:3.4.4'
    
    // JMH dependencies
    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

jmh {
    // Only run 1 fork and 1 iteration for demonstration purposes
    fork = 1
    warmupIterations = 1
    iterations = 1
    // Pass Java 22 FFM flags and the native library path
    jvmArgs = ["--enable-native-access=ALL-UNNAMED", "-Djava.library.path=../rlog-core/target/release"]
}
